se termina confirmación por invitación
